[filechooser] Make sure outgoing URIs are encoded

URIs are expected to be encoded. e.g. spaces are replaced by %20

See https://github.com/flatpak/xdg-desktop-portal/issues/799

BUG: 454850
(cherry picked from commit 9865283589a866e725fa72b19df45d5285a5bae7)